# vr18

./: .gitignore  README.md
Caffe/: Makefile.config  caffeInstallation_Ubuntu16.04.txt
Caffe/scripts/: ClassifyImageFolder.py  IngestSynsetWords.py  ProcessVideoFileInput.py  dominantColorsKmeans.py  setup.sh  vr.db
Caffe/scripts/simpleQuery/: CMakeLists.txt  Conceptquery.cpp  HSVquery.cpp
ShotDetection/: CMakeLists.txt  ShotDetect.cpp  ShotDetect2++.cpp  ShotDetect2+.cpp  ShotDetect2.cpp  ShotDetect3.cpp  cmds.txt
VideoRetrievalBrowser/: VideoRetrievalBrowser.pro  VideoRetrievalBrowser.pro.user.dd7f6d6  clickablelabel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  sqlitedb.cpp  sqlitedb.h
VideoRetrievalBrowser/resources/: resources.qrc  vr.db
